--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3,4 +3,56 @@
   margin: 0;
   padding: 0; }
 
+.body {
+  font-family: "Roboto", sans-serif; }
+
+.header {
+  background: url(../images/cover.jpg) no-repeat center;
+  height: 100vh;
+  width: 100vw;
+  background-size: cover;
+  color: #ffffff; }
+  .header__container-menu {
+    width: 44px;
+    height: 44px;
+    background-color: #0271bc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0; }
+  .header__menu {
+    background: url(../images/ico-menu.svg);
+    width: 16px;
+    height: 14px; }
+  .header__container {
+    display: flex;
+    justify-content: center;
+    min-width: 100vw;
+    flex-wrap: wrap;
+    padding-top: 51vh;
+    padding-left: 15px;
+    padding-right: 15px; }
+  .header__title {
+    text-transform: uppercase;
+    word-spacing: 100rem;
+    font-size: 42px;
+    font-weight: 700;
+    line-height: 55px;
+    text-align: center; }
+  .header__subtitle {
+    font-weight: 500;
+    font-size: 16px;
+    padding-top: 10px; }
+  .header__arrow-container {
+    border-radius: 50%;
+    width: 45px;
+    height: 45px;
+    background-color: #ffffff; }
+  .header__arrow {
+    background: url(../images/ico-scroll-down.svg) no-repeat;
+    width: 20px;
+    height: 11.7px; }
+
 /*# sourceMappingURL=main.css.map */
