--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,6 @@
 @import "core/variables";
 @import "core/reset";
-@import "components/code";
-@import "components/links";
+@import "components/generalstyles";
 @import "layout/header";
 @import "layout/footer";
 @import "pages/index";
