--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,5 +2,6 @@
 @import "core/reset";
 @import "components/generalstyles";
 @import "layout/header";
+@import "layout/hero";
 @import "layout/footer";
 @import "pages/index";
