Add hero & first article

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -8,4 +8,13 @@
       <a href="" class="hero__arrow"></a>
     </nav>
   </section>
+  <article class="article1">
+    <small class="article1__small">Insonmia tips</small>
+    <h2 class="article1__title">Looking through a window</h2>
+    <p class="article1__paragraph">
+      Donec accumsan, nulla ut volutpat porttitor, quan odio tempus felis, at
+      luctus ex diam nec lectus. Vivamus semper sodales rutrum.
+    </p>
+    <a class="article1__button" href="">Go</a>
+  </article>
 </main>
