--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,5 +3,6 @@
 @import "components/generalstyles";
 @import "layout/header";
 @import "layout/hero";
+@import "layout/articles";
 @import "layout/footer";
 @import "pages/index";
