--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -51,11 +51,46 @@
     border-radius: 50%;
     width: 45px;
     height: 45px;
-    background-color: #ffffff; }
+    background-color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translate(138px, 45px); }
   .hero__arrow {
     background: url(../images/ico-scroll-down.svg) no-repeat;
-    width: 200px;
+    width: 20px;
     height: 11.7px;
     display: flex; }
+
+.article1 {
+  padding-top: 30px;
+  padding-left: 15px;
+  padding-right: 15px;
+  line-height: 30px; }
+  .article1__small {
+    color: #8ccbea;
+    font-size: 14px;
+    text-transform: capitalize; }
+  .article1__title {
+    text-transform: capitalize;
+    font-size: 24px;
+    width: 290px;
+    height: 60px; }
+  .article1__paragraph {
+    font-size: 18px;
+    padding-bottom: 30px;
+    padding-top: 15px; }
+  .article1__button {
+    width: 76px;
+    height: 45px;
+    font-size: 20px;
+    font-weight: 600;
+    color: #f26002;
+    text-decoration: none;
+    border: solid #f26002 2px;
+    border-radius: 22.5px;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
 
 /*# sourceMappingURL=main.css.map */
