--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -31,10 +31,14 @@
     width: 45px;
     height: 45px;
     background-color: $color-white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translate(138px, 45px);
   }
   &__arrow {
     background: url(../images/ico-scroll-down.svg) no-repeat;
-    width: 200px;
+    width: 20px;
     height: 11.7px;
     display: flex;
   }
