--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3,6 +3,9 @@
   margin: 0;
   padding: 0; }
 
+.html {
+  scroll-behavior: smooth; }
+
 .body {
   font-family: "Roboto", sans-serif; }
 
@@ -25,17 +28,13 @@
 .hero {
   background: url(../images/cover.jpg) no-repeat center;
   height: 100vh;
-  width: 100vw;
   background-size: cover;
   color: #ffffff; }
   .hero__container {
     display: flex;
     justify-content: center;
-    min-width: 100vw;
     flex-wrap: wrap;
-    padding-top: 51vh;
-    padding-left: 15px;
-    padding-right: 15px; }
+    padding-top: 51vh; }
   .hero__title {
     text-transform: uppercase;
     word-spacing: 100rem;
@@ -55,7 +54,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    transform: translate(138px, 45px); }
+    margin-left: calc(50% - 22.5px);
+    transform: translate(0, 45px); }
   .hero__arrow {
     background: url(../images/ico-scroll-down.svg) no-repeat;
     width: 20px;
@@ -66,7 +66,8 @@
   padding-top: 30px;
   padding-left: 15px;
   padding-right: 15px;
-  line-height: 30px; }
+  line-height: 30px;
+  height: 376px; }
   .article1__small {
     color: #8ccbea;
     font-size: 14px;
@@ -92,5 +93,52 @@
     display: flex;
     justify-content: center;
     align-items: center; }
+
+.article2 {
+  background: #eff9ff;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 30px;
+  line-height: 30px;
+  text-align: center;
+  display: grid;
+  height: 624px;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto; }
+  .article2__title {
+    font-size: 24px;
+    text-transform: capitalize;
+    grid-row: 1/2;
+    height: 30px; }
+  .article2__reason1 {
+    font-size: 18px;
+    grid-row: 2/3;
+    width: 184px;
+    margin-left: calc(50% - 91px); }
+  .article2__reason2 {
+    grid-row: 3/4;
+    font-size: 18px;
+    width: 184px;
+    margin-left: calc(50% - 91px); }
+  .article2__reason3 {
+    grid-row: 4/5;
+    font-size: 18px;
+    width: 184px;
+    margin-left: calc(50% - 91px); }
+  .article2__buttom {
+    grid-row: 5/6;
+    text-decoration: none;
+    border: solid #f26002 2px;
+    background-color: #f26002;
+    border-radius: 22.5px;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 20px;
+    width: 184px;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: calc(50% - 91px); }
 
 /*# sourceMappingURL=main.css.map */
