--- a/src/scss/layout/_articles.scss
+++ b/src/scss/layout/_articles.scss
@@ -3,6 +3,7 @@
   padding-left: 15px;
   padding-right: 15px;
   line-height: 30px;
+  height: 376px;
 
   &__small {
     color: #8ccbea;
@@ -32,5 +33,58 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+}
+
+.article2 {
+  background: #eff9ff;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 30px;
+  line-height: 30px;
+  text-align: center;
+  display: grid;
+  height: 624px;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  &__title {
+    font-size: 24px;
+    text-transform: capitalize;
+    grid-row: 1/2;
+    height: 30px;
+  }
+  &__reason1 {
+    font-size: 18px;
+    grid-row: 2/3;
+    width: 184px;
+    margin-left: calc(50% - 91px);
+  }
+  &__reason2 {
+    grid-row: 3/4;
+    font-size: 18px;
+    width: 184px;
+    margin-left: calc(50% - 91px);
+  }
+  &__reason3 {
+    grid-row: 4/5;
+    font-size: 18px;
+    width: 184px;
+    margin-left: calc(50% - 91px);
+  }
+  &__buttom {
+    grid-row: 5/6;
+    text-decoration: none;
+    border: solid $color-orange 2px;
+    background-color: $color-orange;
+    border-radius: 22.5px;
+    color: $color-white;
+    font-weight: bold;
+    font-size: 20px;
+    width: 184px;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: calc(50% - 91px);
   }
 }
