--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -1,17 +1,13 @@
 .hero {
   background: url(../images/cover.jpg) no-repeat center;
   height: 100vh;
-  width: 100vw;
   background-size: cover;
   color: $color-white;
   &__container {
     display: flex;
     justify-content: center;
-    min-width: 100vw;
     flex-wrap: wrap;
     padding-top: 51vh;
-    padding-left: 15px;
-    padding-right: 15px;
   }
   &__title {
     text-transform: uppercase;
@@ -34,7 +30,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    transform: translate(138px, 45px);
+    margin-left: calc(50% - 22.5px);
+    transform: translate(0, 45px);
   }
   &__arrow {
     background: url(../images/ico-scroll-down.svg) no-repeat;
