--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -1,5 +1,6 @@
 .hero {
   background: url(../images/cover.jpg) no-repeat center;
+  // background: linear-gradient(0deg, black, white);
   height: 100vh;
   background-size: cover;
   color: $color-white;
