--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,5 +1,7 @@
 .footer {
   background: #304268;
+  line-height: 1.88;
+  font-weight: 500;
 
   &__button-container {
     border-radius: 50%;
@@ -11,15 +13,39 @@
     align-items: center;
     margin-left: calc(50% - 22.5px);
     transform: translate(0, -22.5px);
+    box-shadow: 0px 0px 15px -1px rgba(0, 0, 0, 0.56);
     //POSIBLE MIXING O WEREVER>>mismo que el HERO//
   }
   &__button {
     background: url(../images/ico-arrow.svg);
-    display: flex;
     width: 20.6px;
     height: 24px;
   }
   &__links-blog {
     text-decoration: none;
+    text-transform: uppercase;
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    padding-top: 30px;
+  }
+  &__list {
+    list-style: none;
+  }
+  &__links {
+    color: $color-white;
+    text-decoration: none;
+  }
+  &__small {
+    text-align: center;
+    padding-top: 30px;
+    font-size: 14px;
+    padding-bottom: 45px;
+  }
+  &__copy {
+    color: $color-white;
+    display: flex;
+    justify-content: center;
   }
 }
