--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,13 +1,4 @@
 <main>
-  <section class="hero">
-    <section class="hero__container">
-      <h1 class="hero__title">anonymous proxy</h1>
-      <h2 class="hero__subtitle">In hac habitasse platea dictumst</h2>
-    </section>
-    <nav class="hero__arrow-container">
-      <a href="#article2" class="hero__arrow"></a>
-    </nav>
-  </section>
   <article class="article1">
     <small class="article1__small">Insonmia tips</small>
     <h2 class="article1__title">Looking through a window</h2>
@@ -15,7 +6,7 @@
       Donec accumsan, nulla ut volutpat porttitor, quan odio tempus felis, at
       luctus ex diam nec lectus. Vivamus semper sodales rutrum.
     </p>
-    <a class="article1__button" href="">Go</a>
+    <a class="article1__button" href="https://adalab.es/">Go</a>
   </article>
   <article class="article2" id="article2">
     <h2 class="article2__title">3 reason to purchase</h2>
@@ -31,6 +22,6 @@
       <h3 class="article2__subtitle">Morbi dictum</h3>
       <p>Aliquam in dolor et dolor tincidunt.</p>
     </article>
-    <a class="article2__buttom" href=""> More reasons</a>
+    <a class="article2__buttom" href="https://adalab.es/"> More reasons</a>
   </article>
 </main>
