--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -2,4 +2,13 @@
   <nav class="header__container-menu">
     <a class="header__menu" href="https://adalab.es/"></a>
   </nav>
+  <section class="hero">
+    <section class="hero__container">
+      <h1 class="hero__title">anonymous proxy</h1>
+      <h2 class="hero__subtitle">In hac habitasse platea dictumst</h2>
+    </section>
+    <nav class="hero__arrow-container">
+      <a href="#article2" class="hero__arrow"></a>
+    </nav>
+  </section>
 </header>
