--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -1,6 +1,10 @@
 .hero {
-  background: url(../images/cover.jpg) no-repeat center;
-  // background: linear-gradient(0deg, black, white);
+  background: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 1) 0%,
+      rgba(255, 255, 255, 0.10407913165266103) 25%
+    ),
+    url(../images/cover.jpg) no-repeat center;
   height: 100vh;
   background-size: cover;
   color: $color-white;
