--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -12,15 +12,15 @@
     <h2 class="article2__title">3 reason to purchase</h2>
     <article class="article2__reason1">
       <h3 class="article2__subtitle">Ut sed metus</h3>
-      <p>Lorem ipsum dolor sit amet consectetur.</p>
+      <p class="article2-text">Lorem ipsum dolor sit amet consectetur.</p>
     </article>
     <article class="article2__reason2">
       <h3 class="article2__subtitle">Curabitur ac erat</h3>
-      <p>Mauris mattis urna quis lorem molestie.</p>
+      <p class="article2-text">Mauris mattis urna quis lorem molestie.</p>
     </article>
     <article class="article2__reason3">
       <h3 class="article2__subtitle">Morbi dictum</h3>
-      <p>Aliquam in dolor et dolor tincidunt.</p>
+      <p class="article2-text">Aliquam in dolor et dolor tincidunt.</p>
     </article>
     <a class="article2__buttom" href="https://adalab.es/"> More reasons</a>
   </article>
