--- a/src/scss/layout/_articles.scss
+++ b/src/scss/layout/_articles.scss
@@ -1,9 +1,6 @@
 .article1 {
-  padding-top: 30px;
-  padding-left: 15px;
-  padding-right: 15px;
   line-height: 30px;
-  height: 376px;
+  padding: 30px 15px 45px 15px;
 
   &__small {
     color: #8ccbea;
@@ -33,6 +30,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+  @media (min-width: 768px) {
+    & {
+      padding-bottom: 60px;
+    }
+    &__title {
+      font-size: 26px;
+      line-height: 45px;
+    }
+    &__paragraph {
+      font-size: 20px;
+    }
   }
 }
 
@@ -84,5 +93,41 @@
     align-items: center;
     justify-content: center;
     margin-left: calc(50% - 91px);
+  }
+  @media (min-width: 768px) {
+    & {
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: 60px 1fr 105px;
+      height: auto;
+      padding-bottom: -20px;
+    }
+    &__title {
+      grid-row: 1/2;
+      grid-column: 1/4;
+      font-size: 26px;
+    }
+    &__reason1 {
+      grid-row: 2/3;
+      grid-column: 1/2;
+    }
+    &__reason2 {
+      grid-row: 2/3;
+      grid-column: 2/3;
+      padding-bottom: 60px;
+    }
+    &__reason3 {
+      grid-row: 2/3;
+      grid-column: 3/4;
+    }
+    &__subtitle {
+      font-size: 24px;
+    }
+    &__text {
+      font-size: 20px;
+    }
+    &__buttom {
+      grid-row: 3/4;
+      grid-column: 2/3;
+    }
   }
 }
