--- a/src/scss/layout/_articles.scss
+++ b/src/scss/layout/_articles.scss
@@ -96,7 +96,7 @@
   }
   @media (min-width: 768px) {
     & {
-      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 212.3px 1fr;
       grid-template-rows: 60px 1fr 105px;
       height: auto;
       padding-bottom: -20px;
@@ -105,6 +105,7 @@
       grid-row: 1/2;
       grid-column: 1/4;
       font-size: 26px;
+      line-height: 45px;
     }
     &__reason1 {
       grid-row: 2/3;
