--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -98,7 +98,8 @@
     align-items: center; }
   @media (min-width: 768px) {
     .article1 {
-      padding-bottom: 60px; }
+      padding-bottom: 60px;
+      padding-left: 39px; }
     .article1__title {
       font-size: 26px;
       line-height: 45px; }
@@ -151,24 +152,29 @@
     margin-left: calc(50% - 91px); }
   @media (min-width: 768px) {
     .article2 {
-      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 212.3px 1fr;
       grid-template-rows: 60px 1fr 105px;
       height: auto;
       padding-bottom: -20px; }
     .article2__title {
       grid-row: 1/2;
       grid-column: 1/4;
-      font-size: 26px; }
+      font-size: 26px;
+      line-height: 45px; }
     .article2__reason1 {
       grid-row: 2/3;
-      grid-column: 1/2; }
+      grid-column: 1/2;
+      align-self: initial;
+      margin-left: auto; }
     .article2__reason2 {
       grid-row: 2/3;
       grid-column: 2/3;
       padding-bottom: 60px; }
     .article2__reason3 {
       grid-row: 2/3;
-      grid-column: 3/4; }
+      grid-column: 3/4;
+      margin-left: 0;
+      align-self: flex-start; }
     .article2__subtitle {
       font-size: 24px; }
     .article2__text {
@@ -189,8 +195,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: calc(50% - 22.5px);
     transform: translate(0, -22.5px);
+    margin-left: calc(50% - 22.5px);
     box-shadow: 0px 0px 15px -1px rgba(0, 0, 0, 0.56); }
   .footer__button {
     background: url(../images/ico-arrow.svg);
@@ -218,5 +224,20 @@
     color: #ffffff;
     display: flex;
     justify-content: center; }
+  @media (min-width: 768px) {
+    .footer__container {
+      display: flex;
+      justify-content: space-around;
+      flex-direction: row;
+      align-items: initial; }
+    .footer__links-blog {
+      padding: 0;
+      text-align: initial;
+      padding-bottom: 45px; }
+    .footer__small {
+      order: -1;
+      padding: 0; }
+    .footer__copy {
+      justify-content: flex-start; } }
 
 /*# sourceMappingURL=main.css.map */
