--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -11,8 +11,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: calc(50% - 22.5px);
     transform: translate(0, -22.5px);
+    margin-left: calc(50% - 22.5px);
     box-shadow: 0px 0px 15px -1px rgba(0, 0, 0, 0.56);
     //POSIBLE MIXING O WEREVER>>mismo que el HERO//
   }
@@ -47,5 +47,25 @@
     color: $color-white;
     display: flex;
     justify-content: center;
+  }
+  @media (min-width: 768px) {
+    &__container {
+      display: flex;
+      justify-content: space-around;
+      flex-direction: row;
+      align-items: initial;
+    }
+    &__links-blog {
+      padding: 0;
+      text-align: initial;
+      padding-bottom: 45px;
+    }
+    &__small {
+      order: -1;
+      padding: 0;
+    }
+    &__copy {
+      justify-content: flex-start;
+    }
   }
 }
