--- a/src/scss/layout/_articles.scss
+++ b/src/scss/layout/_articles.scss
@@ -10,7 +10,6 @@
   &__title {
     text-transform: capitalize;
     font-size: 24px;
-    width: 290px;
     height: 60px;
   }
   &__paragraph {
@@ -42,6 +41,21 @@
     }
     &__paragraph {
       font-size: 20px;
+    }
+  }
+  @media (min-width: 1200px) {
+    & {
+      padding-left: 275px;
+      padding-right: 275px;
+    }
+    &__small {
+      font-size: 16px;
+    }
+    &__title {
+      font-size: 32px;
+    }
+    &__paragraph {
+      line-height: 30px;
     }
   }
 }
@@ -98,9 +112,9 @@
   @media (min-width: 768px) {
     & {
       grid-template-columns: 1fr 212.3px 1fr;
-      grid-template-rows: 60px 1fr 105px;
       height: auto;
       padding-bottom: -20px;
+      line-height: 30px;
     }
     &__title {
       grid-row: 1/2;
@@ -134,6 +148,30 @@
     &__buttom {
       grid-row: 3/4;
       grid-column: 2/3;
+    }
+  }
+  @media (min-width: 1200px) {
+    & {
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: 105px 1fr 105px;
+      font-weight: 500;
+    }
+    &__title {
+      font-size: 32px;
+      line-height: 45px;
+      padding-bottom: 45px;
+    }
+    &__reason1 {
+      align-self: center;
+      padding-bottom: 100px;
+    }
+    &__reason2 {
+      align-self: center;
+      padding-bottom: 100px;
+    }
+    &__reason3 {
+      align-self: center;
+      padding-bottom: 100px;
     }
   }
 }
