--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -53,4 +53,14 @@
       font-size: 24px;
     }
   }
+  @media (min-width: 1200px) {
+    &__container {
+      padding-top: 25vw;
+    }
+
+    &__title {
+      font-size: 100px;
+      line-height: 132px;
+    }
+  }
 }
