--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
-  <nav class="footer__button-container">
-    <a href="#header" class="footer__button"></a>
+  <nav class="footer__buttom-container">
+    <a href="#header" class="footer__buttom"></a>
   </nav>
   <div class="footer__container">
     <nav class="footer__links-blog">
