--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -6,7 +6,7 @@
       Donec accumsan, nulla ut volutpat porttitor, quan odio tempus felis, at
       luctus ex diam nec lectus. Vivamus semper sodales rutrum.
     </p>
-    <a class="article1__button" href="https://adalab.es/">Go</a>
+    <a class="article1__buttom" href="https://adalab.es/">Go</a>
   </article>
   <article class="article2" id="article2">
     <h2 class="article2__title">3 reason to purchase</h2>
