--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,7 @@
 @import "core/variables";
 @import "core/reset";
 @import "components/generalstyles";
+@import "components/animations";
 @import "layout/header";
 @import "layout/hero";
 @import "layout/articles";
