--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -11,35 +11,67 @@
 
 @-webkit-keyframes pointUp {
   0% {
-    transform: translateY 0; }
+    transform: translateY(0); }
   20% {
-    transform: translateY -20px; }
+    transform: translateY(-20px); }
   35% {
-    transform: translateY -10px; }
+    transform: translateY(-10px); }
   50% {
-    transform: translateY -20px; }
+    transform: translateY(-20px); }
   65% {
-    transform: translateY -10px; }
+    transform: translateY(-10px); }
   80% {
-    transform: translateY -20px; }
+    transform: translateY(-20px); }
   100% {
-    transform: translateY 0px; } }
+    transform: translateY(0px); } }
 
 @keyframes pointUp {
   0% {
-    transform: translateY 0; }
+    transform: translateY(0); }
   20% {
-    transform: translateY -20px; }
+    transform: translateY(-20px); }
   35% {
-    transform: translateY -10px; }
+    transform: translateY(-10px); }
   50% {
-    transform: translateY -20px; }
+    transform: translateY(-20px); }
   65% {
-    transform: translateY -10px; }
+    transform: translateY(-10px); }
   80% {
-    transform: translateY -20px; }
+    transform: translateY(-20px); }
   100% {
-    transform: translateY 0px; } }
+    transform: translateY(0px); } }
+
+@-webkit-keyframes pointDown {
+  0% {
+    transform: translateY(0); }
+  20% {
+    transform: translateY(20px); }
+  35% {
+    transform: translateY(10px); }
+  50% {
+    transform: translateY(20px); }
+  65% {
+    transform: translateY(10px); }
+  80% {
+    transform: translateY(20px); }
+  100% {
+    transform: translateY(0px); } }
+
+@keyframes pointDown {
+  0% {
+    transform: translateY(0); }
+  20% {
+    transform: translateY(20px); }
+  35% {
+    transform: translateY(10px); }
+  50% {
+    transform: translateY(20px); }
+  65% {
+    transform: translateY(10px); }
+  80% {
+    transform: translateY(20px); }
+  100% {
+    transform: translateY(0px); } }
 
 .header__container-menu {
   width: 44px;
@@ -88,6 +120,15 @@
     align-items: center;
     margin-left: calc(50% - 22.5px);
     transform: translate(0, 45px); }
+  .hero__arrow-container:hover {
+    -webkit-animation-name: pointDown;
+    animation-name: pointDown;
+    -webkit-animation-timing-function: ease;
+    animation-timing-function: ease;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s; }
   .hero__arrow {
     background: url(../images/ico-scroll-down.svg) no-repeat;
     width: 20px;
@@ -137,7 +178,7 @@
     transition: background-color 0.6s ease 0s font-size 0.6s ease 0s color 0.6s ease; }
   .article1__buttom:hover {
     background-color: #f26002;
-    font-size: 27px;
+    font-size: 25px;
     color: #ffffff; }
   @media (min-width: 768px) {
     .article1 {
@@ -283,8 +324,8 @@
     animation-timing-function: ease;
     -webkit-animation-iteration-count: infinite;
     animation-iteration-count: infinite;
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s; }
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s; }
   .footer__buttom {
     background: url(../images/ico-arrow.svg);
     width: 20.6px;
