--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -4,16 +4,7 @@
   font-weight: 500;
 
   &__buttom-container {
-    border-radius: 50%;
-    width: 45px;
-    height: 45px;
-    background-color: $color-white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    top: -22.5px;
-    left: calc(50% - 22.5px);
+    @include arrowsbuttoms(-22.5px);
     box-shadow: 0px 0px 15px -1px rgba(0, 0, 0, 0.56);
     //POSIBLE MIXING O WEREVER>>mismo que el HERO//
   }
