--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -176,7 +176,7 @@
     justify-content: center;
     align-items: center;
     background-color: white;
-    transition: background-color 0.6s ease 0s font-size 0.6s ease 0s color 0.6s ease; }
+    transition: background-color 0.6s ease, font-size 0.6s ease, color 0.6s ease; }
   .article1__buttom:hover {
     background-color: #f26002;
     font-size: 24px;
@@ -245,7 +245,7 @@
     align-items: center;
     justify-content: center;
     margin-left: calc(50% - 91px);
-    transition: background-color 0.6s ease 0s, font-size 0.5s ease 0s color 0.6s ease; }
+    transition: background-color 0.6s ease, font-size 0.5s ease, color 0.6s ease; }
   .article2__buttom:hover {
     background-color: #ffffff;
     color: #f26002;
