--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -4,7 +4,7 @@
   </nav>
   <section class="hero">
     <section class="hero__container">
-      <h1 class="hero__title">anonymous proxy</h1>
+      <h1 class="hero__title">Anonymous Proxy</h1>
       <h2 class="hero__subtitle">In hac habitasse platea dictumst</h2>
     </section>
     <nav class="hero__arrow-container">
