--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,3 +1,4 @@
-$font-general: "Roboto", sans-serif;
+$font-1: "Roboto", sans-serif;
+$font-2: "Roboto Slab", sans-serif;
 $color-white: #ffffff;
 $color-orange: #f26002;
