--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -105,7 +105,8 @@
     font-size: 42px;
     font-weight: 700;
     line-height: 55px;
-    text-align: center; }
+    text-align: center;
+    font-family: "Roboto Slab", sans-serif; }
   .hero__subtitle {
     font-weight: 500;
     font-size: 16px;
@@ -158,7 +159,8 @@
   .article1__title {
     text-transform: capitalize;
     font-size: 24px;
-    height: 60px; }
+    height: 60px;
+    font-family: "Roboto Slab", sans-serif; }
   .article1__paragraph {
     font-size: 18px;
     padding-bottom: 30px;
@@ -215,6 +217,8 @@
     text-transform: capitalize;
     grid-row: 1/2;
     height: 30px; }
+  .article2__subtitle {
+    font-family: "Roboto Slab", sans-serif; }
   .article2__reason1 {
     font-size: 18px;
     grid-row: 2/3;
@@ -260,7 +264,8 @@
       grid-row: 1/2;
       grid-column: 1/4;
       font-size: 26px;
-      line-height: 45px; }
+      line-height: 45px;
+      font-family: "Roboto Slab", sans-serif; }
     .article2__reason1 {
       grid-row: 2/3;
       grid-column: 1/2;
