--- a/src/scss/layout/_articles.scss
+++ b/src/scss/layout/_articles.scss
@@ -11,6 +11,7 @@
     text-transform: capitalize;
     font-size: 24px;
     height: 60px;
+    font-family: $font-2;
   }
   &__paragraph {
     font-size: 18px;
@@ -82,6 +83,9 @@
     grid-row: 1/2;
     height: 30px;
   }
+  &__subtitle {
+    font-family: $font-2;
+  }
   &__reason1 {
     font-size: 18px;
     grid-row: 2/3;
@@ -134,6 +138,7 @@
       grid-column: 1/4;
       font-size: 26px;
       line-height: 45px;
+      font-family: $font-2;
     }
     &__reason1 {
       grid-row: 2/3;
