--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -21,6 +21,7 @@
     font-weight: 700;
     line-height: 55px;
     text-align: center;
+    font-family: $font-2;
   }
   &__subtitle {
     font-weight: 500;
