--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -211,7 +211,8 @@
   display: grid;
   height: 624px;
   grid-template-columns: 1fr;
-  grid-template-rows: auto; }
+  grid-template-rows: auto;
+  padding-bottom: 20px; }
   .article2__title {
     font-size: 24px;
     text-transform: capitalize;
@@ -238,9 +239,9 @@
     grid-row: 5/6;
     text-decoration: none;
     border: solid #f26002 2px;
-    background-color: #f26002;
+    background-color: #ffffff;
     border-radius: 22.5px;
-    color: #ffffff;
+    color: #f26002;
     font-weight: bold;
     font-size: 20px;
     width: 184px;
@@ -259,7 +260,8 @@
       grid-template-columns: 1fr 212.3px 1fr;
       height: auto;
       line-height: 30px;
-      height: 395px; }
+      height: 395px;
+      padding-bottom: 0px; }
     .article2__title {
       grid-row: 1/2;
       grid-column: 1/4;
@@ -292,7 +294,8 @@
       grid-template-columns: 1fr 1fr 1fr;
       grid-template-rows: 105px 1fr 105px;
       font-weight: 500;
-      height: 427px; }
+      height: 427px;
+      padding-bottom: 0px; }
     .article2__title {
       font-size: 32px;
       line-height: 45px;
@@ -322,7 +325,8 @@
     position: relative;
     top: -22.5px;
     left: calc(50% - 22.5px);
-    box-shadow: 0px 0px 15px -1px rgba(0, 0, 0, 0.56); }
+    box-shadow: 0px 0px 15px -1px rgba(0, 0, 0, 0.56);
+    display: none; }
   .footer__buttom-container:hover {
     -webkit-animation-name: pointUp;
     animation-name: pointUp;
@@ -359,6 +363,8 @@
     display: flex;
     justify-content: center; }
   @media (min-width: 768px) {
+    .footer__buttom-container {
+      display: flex; }
     .footer__container {
       display: flex;
       justify-content: space-around;
