--- a/src/scss/layout/_articles.scss
+++ b/src/scss/layout/_articles.scss
@@ -77,6 +77,7 @@
   height: 624px;
   grid-template-columns: 1fr;
   grid-template-rows: auto;
+  padding-bottom: 20px;
   &__title {
     font-size: 24px;
     text-transform: capitalize;
@@ -108,9 +109,9 @@
     grid-row: 5/6;
     text-decoration: none;
     border: solid $color-orange 2px;
-    background-color: $color-orange;
+    background-color: $color-white;
     border-radius: 22.5px;
-    color: $color-white;
+    color: $color-orange;
     font-weight: bold;
     font-size: 20px;
     width: 184px;
@@ -132,6 +133,7 @@
       height: auto;
       line-height: 30px;
       height: 395px;
+      padding-bottom: 0px;
     }
     &__title {
       grid-row: 1/2;
@@ -174,6 +176,7 @@
       grid-template-rows: 105px 1fr 105px;
       font-weight: 500;
       height: 427px;
+      padding-bottom: 0px;
     }
     &__title {
       font-size: 32px;
